dartagnan/src/test/resources/spirv/opencl/gpuverify/sourcelocation_tests/races/fail/write_write/normal.spvasm
; @Config: 8, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 30
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpName %a "a"
               OpName %entry "entry"
               OpName %if_then "if.then"
               OpName %if_end "if.end"
               OpName %a_addr "a.addr"
               OpName %call "call"
               OpName %call1 "call1"
               OpName %arrayidx "arrayidx"
               OpName %call2 "call2"
               OpName %cmp "cmp"
               OpName %arrayidx3 "arrayidx3"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
               OpDecorate %a_addr Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
     %uint_7 = OpConstant %uint 7
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
       %bool = OpTypeBool
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void DontInline %8
          %a = OpFunctionParameter %_ptr_Workgroup_uint
      %entry = OpLabel
     %a_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
               OpStore %a_addr %a Aligned 4
         %16 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
       %call = OpCompositeExtract %uint %16 0
         %18 = OpLoad %_ptr_Workgroup_uint %a_addr Aligned 4
         %19 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
      %call1 = OpCompositeExtract %uint %19 0
   %arrayidx = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %18 %call1
               OpStore %arrayidx %call Aligned 4
         %22 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
      %call2 = OpCompositeExtract %uint %22 0
        %cmp = OpIEqual %bool %call2 %uint_0
               OpBranchConditional %cmp %if_then %if_end
    %if_then = OpLabel
         %27 = OpLoad %_ptr_Workgroup_uint %a_addr Aligned 4
  %arrayidx3 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %27 %uint_7
               OpStore %arrayidx3 %uint_0 Aligned 4
               OpBranch %if_end
     %if_end = OpLabel
               OpReturn
               OpFunctionEnd
